--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,9 @@ dependencies:
   shared_preferences: ^2.2.0
   flutter_secure_storage: ^9.2.4
   json_annotation: ^4.9.0
+  pin_code_fields: ^8.0.1
+  cached_network_image: ^3.4.1
+  carousel_slider: ^5.0.0
 
 dev_dependencies:
   build_runner:
