--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,11 @@ dependencies:
   pin_code_fields: ^8.0.1
   cached_network_image: ^3.4.1
   carousel_slider: ^5.0.0
+  interval_time_picker: ^3.0.3+9
+  syncfusion_flutter_calendar: ^28.2.12
+  form_builder_validators: ^11.1.2
+  form_validator: ^2.1.1
+  dropdown_search: ^5.0.6
 
 dev_dependencies:
   build_runner:
