<new passport septs added>

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,10 @@ dependencies:
   form_builder_validators: ^11.1.2
   form_validator: ^2.1.1
   dropdown_search: ^5.0.6
+  im_stepper: ^1.0.1+1
+  image_picker: ^1.1.2
+  file_picker: ^9.2.1
+  flutter_pdfview: ^1.4.0
 
 dev_dependencies:
   build_runner:
