--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,10 @@ dependencies:
   image_picker: ^1.1.2
   file_picker: ^9.2.1
   flutter_pdfview: ^1.4.0
+  timeago: ^3.7.0
+  qr_flutter: ^4.1.0
+  timeline_tile: ^2.0.0
+  flutter_cached_pdfview: ^0.4.3
 
 dev_dependencies:
   build_runner:
